<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/card"
    android:layout_height="wrap_content"
    android:layout_marginStart="0dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="0dp"
    android:layout_marginBottom="8dp"
    android:background="@color/white"
    app:strokeColor="@color/blue_dark"
    app:strokeWidth="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="18dp">

        <TextView
            android:id="@+id/tvItemMaterial"
            style="@style/title_black"
            android:ellipsize="end"
            android:maxLength="50"
            android:maxLines="1"
            android:text="@string/material_name_style_template"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvItemQuantity"
            style="@style/title_black"
            android:ellipsize="end"
            android:maxLength="50"
            android:maxLines="1"
            android:text="@string/material_quantity_template"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvItemMaterial" />

        <TextView
            android:id="@+id/tvItemId"
            style="@style/title_black"
            android:ellipsize="end"
            android:maxLength="50"
            android:maxLines="1"
            android:text="@string/material_id_template"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvItemQuantity" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>