<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.fragments.materialdetail.MaterialDetailFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvMaterialInfo"
        style="@style/card"
        android:layout_margin="8dp"
        app:cardBackgroundColor="@color/whiteish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/blue_dark"
        app:strokeWidth="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="18dp">

            <TextView
                android:id="@+id/tvDetailMaterial"
                style="@style/title_black"
                android:ellipsize="end"
                android:maxLength="50"
                android:maxLines="1"
                android:text="@string/material_name_style_template"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvDetailQuantity"
                style="@style/title_black"
                android:ellipsize="end"
                android:maxLength="50"
                android:maxLines="1"
                android:text="@string/material_quantity_template"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvDetailMaterial" />

            <TextView
                android:id="@+id/tvDetailId"
                style="@style/title_black"
                android:ellipsize="end"
                android:maxLength="50"
                android:maxLines="1"
                android:text="@string/material_id_template"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvDetailQuantity" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvRequestsInfo"
        style="@style/card"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        app:cardBackgroundColor="@color/blue_primary"
        app:cardCornerRadius="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvMaterialInfo">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <Button
                android:id="@+id/btnRequestsOrder"
                style="@style/btn_borderless"
                android:text="@string/order_requests"
                app:layout_constraintEnd_toStartOf="@+id/btnRequestsReceiving"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnRequestsReceiving"
                style="@style/btn_borderless"
                android:text="@string/receiving_requests"
                app:layout_constraintBaseline_toBaselineOf="@+id/btnRequestsOrder"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnRequestsOrder" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvRequests"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnRequestsOrder"
                tools:listitem="@layout/item_request" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>